# otus-hw1

./: .travis.yml  CMakeLists.txt  lib.cpp  lib.h  main.cpp  test_main.cpp  version.h.in
